CRUD almost clear, need request checker and data family on anime route
