# docs/swagger.json
@@ -43,6 +43,82 @@
                 "responses": {}
             }
         },
+        "/api/anime/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Data Anime"
+                ],
+                "summary": "Call Single Data Anime",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "search anime by id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            },
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Data Anime"
+                ],
+                "summary": "Update Single Data Anime",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "update anime by id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "query params",
+                        "name": "request",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.AnimeRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            },
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Data Anime"
+                ],
+                "summary": "Delete Anime",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "delete anime",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/api/family": {
             "get": {
                 "consumes": [
@@ -99,7 +175,8 @@
                         "type": "string",
                         "description": "search family by id",
                         "name": "id",
-                        "in": "path"
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {}
@@ -120,13 +197,13 @@
                         "type": "string",
                         "description": "update family by id",
                         "name": "id",
-                        "in": "path"
+                        "in": "path",
+                        "required": true
                     },
                     {
                         "description": "query params",
                         "name": "request",
                         "in": "body",
-                        "required": true,
                         "schema": {
                             "$ref": "#/definitions/models.FamilyRequest"
                         }
@@ -150,7 +227,8 @@
                         "type": "string",
                         "description": "delete family",
                         "name": "id",
-                        "in": "path"
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {}
@@ -159,6 +237,47 @@
     },
     "definitions": {
         "models.Anime": {
+            "type": "object",
+            "properties": {
+                "condition": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "duration": {
+                    "type": "integer"
+                },
+                "episode": {
+                    "type": "integer"
+                },
+                "family_id": {
+                    "type": "string"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "position": {
+                    "type": "string"
+                },
+                "rate": {
+                    "type": "integer"
+                },
+                "season": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                },
+                "year": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.AnimeRequest": {
             "type": "object",
             "properties": {
                 "condition": {
