# models/anime.models.go
@@ -34,20 +34,5 @@ type AnimeRequest struct {
 	Condition   string    `json:"condition"`
 	Position    string    `json:"position"`
 	Rate        *int8     `json:"rate"`
-}
-
-type AnimeResponse struct {
-	ID          uuid.UUID     `json:"id" swaggerignore:"true"`
-	Title       string        `json:"title"`
-	Family      FamilyRequest `json:"family"`
-	Type        string        `json:"type"`
-	Description string        `json:"description"`
-	Episode     int           `json:"episode"`
-	Duration    int16         `json:"duration"`
-	Season      string        `json:"season"`
-	Year        int16         `json:"year"`
-	Link        string        `json:"link"`
-	Condition   string        `json:"condition"`
-	Position    string        `json:"position"`
-	Rate        *int8         `json:"rate"`
+	CreatedAt   int64     `json:"created_at" swaggerignore:"true"`
 }
